<resources>
    <string name="app_name">ozero-reflex</string>
    <string name="action_settings">Settings</string>

    <string name="reaction_mode">Reaction Timer Mode</string>
    <string name="buzzer_mode">Gameshow Buzzer Mode</string>

    <string name="two_player">2 Player</string>
    <string name="three_player">3 Player</string>
    <string name="four_player">4 Player</string>

    <string name="statistics">Statistics</string>

    <string name="title_activity_one_player">Reaction Timer</string>

    <string name="reaction_timer_wait">Wait…</string>
    <string name="reaction_timer_now">Now!</string>

    <string name="dialog_ok">OK</string>

    <string name="title_activity_two_player">Two Player Buzzer</string>

    <string name="player_one">P1</string>
    <string name="player_two">P2</string>
    <string name="player_three">P3</string>
    <string name="player_four">P4</string>

    <string name="title_activity_three_player">Three Player Buzzer</string>
    <string name="title_activity_four_player">Four Player Buzzer</string>

    <string name="title_activity_statistics">Statistics</string>
    <string name="email_stats">Email Statistics</string>
    <string name="clear_stats">Clear Statistics</string>

    <string name="title_activity_select_players">Select Number of Players</string>

    <string name="title_activity_buzzer">Buzzer Mode</string>



</resources>
