<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_one"
        android:id="@+id/button11"
        android:layout_weight="1"
        android:onClick="playerOneTap" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_two"
        android:id="@+id/button12"
        android:layout_weight="1"
        android:onClick="playerTwoTap" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_three"
        android:id="@+id/button13"
        android:layout_weight="1"
        android:onClick="playerThreeTap" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_four"
        android:id="@+id/button14"
        android:layout_weight="1"
        android:onClick="playerFourTap" />
</LinearLayout>