<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/player_one"
        android:id="@+id/button8"
        android:layout_weight="1"
        android:onClick="playerOneTap" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/player_two"
        android:id="@+id/button9"
        android:layout_weight="1"
        android:onClick="playerTwoTap" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/player_three"
        android:id="@+id/button10"
        android:layout_weight="1"
        android:onClick="playerThreeTap" />

</LinearLayout>