<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ozero_reflex.SelectPlayersActivity">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/two_player"
        android:id="@+id/button3"
        android:layout_above="@+id/button4"
        android:layout_centerHorizontal="true"
        android:onClick="startTwoPlayer" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/three_player"
        android:id="@+id/button4"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="startThreePlayer" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/four_player"
        android:id="@+id/button17"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:onClick="startFourPlayer" />
</RelativeLayout>
